Fixed footer getting cut off during 3D effect

--- a/src/components/features/footer/style.css
+++ b/src/components/features/footer/style.css
@@ -2,7 +2,6 @@
   display: flex;
   font-size: 0.7rem;
   letter-spacing: 1px;
-  padding: 30px 0;
   text-transform: capitalize;
   color: var(--color-light-gray);
 }
